# image-to-text-exp

./: .env.example  Makefile  README.md  pyproject.toml
configs/: interactive_feedback_demo.yaml  interactive_sr_demo.yaml  phase1.yaml  phase2.yaml  phase2_live_smoke.yaml  phase3.yaml  smoke.yaml
docs/: benchmarking.md  feedback_loop.md  findings.md  findings_phase1.md  findings_phase2.md  findings_phase3.md  implementation_log.md  project_structure.md  reproducibility.md  setup.md  super_resolution.md  troubleshooting.md
prompts/: benchmark_prompts.json  smoke_prompts.json
results/baseline/: baseline_results.csv  summary.md
results/feedback_loop/: feedback_results.csv  summary.md
results/feedback_loop_live_smoke/: feedback_results.csv  summary.md
results/super_resolution/: sr_results.csv  summary.md
src/: __init__.py  cli.py
src/config/: __init__.py  models.py
src/feedback/: __init__.py  gemini.py  prompts.py
src/frontend/: app.py
src/io/: __init__.py  artifacts.py  prompts.py
src/llm/: ollama.py
src/metrics/: clip_score.py
src/models/: __init__.py  adapters.py  registry.py
src/pipelines/: __init__.py  baseline.py  feedback_loop.py  super_resolution.py
src/reporting/: reports.py
src/services/: __init__.py  interactive.py
src/sr/: __init__.py  adapters.py
src/utils/: env.py  logging.py  schemas.py
tests/: conftest.py  test_cli.py  test_config.py  test_gemini.py  test_integration_baseline.py  test_integration_feedback.py  test_integration_sr.py  test_interactive.py  test_ollama.py  test_prompts.py  test_registry.py  test_sr.py
(+54 files in other folders)
